--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         config: [
           { target: android, os: ubuntu-latest, tasks: :library:testDebugUnitTest :library:testReleaseUnitTest, continueOnError: false },
-          { target: apple, os: macos-latest, tasks: :library:iosX64Test :library:iosSimulatorArm64Test, continueOnError: false }
+          { target: apple, os: macos-latest, tasks: :library:iosX64Test :library:iosSimulatorArm64Test, continueOnError: false },
         ]
     runs-on: ${{ matrix.config.os }}
     name: Build ${{ matrix.config.target }}
