--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         config: [
-          { target: android, os: ubuntu-latest, tasks: library:testDebugUnitTest library:testReleaseUnitTest, continueOnError: false },
-          { target: apple, os: macos-latest, tasks: library:iosX64Test library:iosSimulatorArm64Test, continueOnError: false }
+          { target: android, os: ubuntu-latest, tasks: testDebugUnitTest testReleaseUnitTest, continueOnError: false },
+          { target: apple, os: macos-latest, tasks: iosX64Test iosSimulatorArm64Test, continueOnError: false }
         ]
     runs-on: ${{ matrix.config.os }}
     name: Build ${{ matrix.config.target }}
@@ -27,7 +27,7 @@ jobs:
 
       - name: Test ${{ matrix.config.target }} targets
         continue-on-error: ${{ matrix.config.continueOnError }}
-        run: ./gradlew ${{ matrix.config.tasks }}
+        run: ./gradlew :library:${{ matrix.config.tasks }}
 
   release:
     if: ${{ github.event_name != 'pull_request' }}
