--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         config: [
-          { target: android, os: ubuntu-latest, tasks: testDebugUnitTest testReleaseUnitTest, continueOnError: false },
-          { target: apple, os: macos-latest, tasks: iosX64Test iosSimulatorArm64Test, continueOnError: false }
+          { target: android, os: ubuntu-latest, tasks: testDebugUnitTest testReleaseUnitTest, continueOnError: true },
+          { target: apple, os: macos-latest, tasks: iosX64Test iosSimulatorArm64Test, continueOnError: true }
         ]
     runs-on: ${{ matrix.config.os }}
     name: Build ${{ matrix.config.target }}
