--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -54,10 +54,10 @@ jobs:
         run:  > 
           ./gradlew :library:publishAllPublicationsToMavenCentral 
           -Penv=dev
-          -PORG_GRADLE_PROJECT_mavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
-          -PORG_GRADLE_PROJECT_mavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
-          -PORG_GRADLE_PROJECT_signingInMemoryKey=${{ secrets.SIGNING_KEY }}
-          -PORG_GRADLE_PROJECT_signingInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
+          -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
+          -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
+          -PsigningInMemoryKey=${{ secrets.SIGNING_KEY }}
+          -PsigningInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
