--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "1.9.0"
 kotlin-test = "1.9.0"
 compose-multiplatform = "1.5.0"
-kotlinx-coroutines = "1.6.4"
+kotlinx-coroutines = "1.7.1"
 androidPlugins = "7.4.2"
 koin = "3.4.0"
 androidViewModel = "2.6.1"
@@ -20,6 +20,7 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
 compose-bom = "2023.03.00"
+turbine = "1.0.0"
 
 [plugins]
 androidApp = { id = "com.android.application", version.ref = "androidPlugins" }
@@ -49,6 +50,7 @@ ballast-navigation = { module = "io.github.copper-leaf:ballast-navigation", vers
 
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
