--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,17 +9,17 @@ jobs:
     strategy:
       matrix:
         config: [
-          { target: android, os: macos-latest, tasks: testDebugUnitTest testReleaseUnitTest, continueOnError: true },
-          { target: ios, os: macos-latest, tasks: iosSimulatorArm64Test iosX64Test, continueOnError: true }
+          { target: android, os: macos-latest, tasks: testDebugUnitTest testReleaseUnitTest, continueOnError: false },
+          { target: ios, os: macos-latest, tasks: iosSimulatorArm64Test iosX64Test, continueOnError: false }
         ]
     runs-on: ${{ matrix.config.os }}
     name: Build and test ${{ matrix.config.target }}
     steps:
       - uses: actions/checkout@v3
-      - name: set up JDK 11
+      - name: set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup gradle
@@ -37,10 +37,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: set up JDK 11
+      - name: set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup gradle
