--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,12 @@ jobs:
 
       - name: Publish to Sonatype
         run:  >
-          ./gradlew :library:publishAllPublicationsToMavenRepository
-          -PORG_GRADLE_PROJECT_mavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
-          -PORG_GRADLE_PROJECT_mavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
-          -PORG_GRADLE_PROJECT_signingInMemoryKey=${{ secrets.SIGNING_KEY }} 
-          -PORG_GRADLE_PROJECT_signingInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
+          ./gradlew :library:publishAllPublicationsToMavenCentral 
+          -Penv=dev
+          -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
+          -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
+          -PsigningInMemoryKey=${{ secrets.SIGNING_KEY }}
+          -PsigningInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
