Start type safe navigation using KSP

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Bump version
-        run: ./gradlew :library:incrementPatch
+        run: ./gradlew incrementMajor
 
 
       - name: Publish to Sonatype
