--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,6 +34,12 @@ jobs:
     runs-on: macos-latest
     needs:
       - build
+    env:
+      MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+      MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+      SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+      SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v3
 
@@ -46,16 +52,29 @@ jobs:
       - name: Setup gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Publish to Sonatype
+      - name: Publish Annotation to Sonatype
         run:  > 
-          ./gradlew :library:publishAllPublicationsToMavenCentral 
+          ./gradlew :annotation:publishAllPublicationsToMavenCentral
           -Penv=dev
           -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
           -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
           -PsigningInMemoryKey=${{ secrets.SIGNING_KEY }}
           -PsigningInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
-        env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
-          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+
+      - name: Publish Processor to Sonatype
+        run:  > 
+          ./gradlew :processor:publishAllPublicationsToMavenCentral
+          -Penv=dev
+          -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
+          -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
+          -PsigningInMemoryKey=${{ secrets.SIGNING_KEY }}
+          -PsigningInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
+
+      - name: Publish Library to Sonatype
+        run:  > 
+          ./gradlew :library:publishAllPublicationsToMavenCentral
+          -Penv=dev
+          -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
+          -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
+          -PsigningInMemoryKey=${{ secrets.SIGNING_KEY }}
+          -PsigningInMemoryKeyPassword=${{ secrets.SIGNING_PASSWORD }}
