--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,27 @@
 [versions]
-kotlin = "1.9.0"
-kotlin-test = "1.9.0"
-compose-multiplatform = "1.5.0"
+kotlin = "1.9.20"
+compose-multiplatform = "1.5.12"
 kotlinx-coroutines = "1.7.1"
-androidPlugins = "7.4.2"
+androidPlugins = "8.1.4"
 koin = "3.4.0"
 androidViewModel = "2.6.1"
 activity-compose = "1.7.2"
 
-compose-compiler = "1.4.8"
-ballast = "3.0.2"
+compose-compiler = "1.5.4"
+ballast = "4.1.0"
 
 minSdk = "25"
-targetSdk = "33"
-compileSdk = "33"
-core-ktx = "1.9.0"
+targetSdk = "34"
+compileSdk = "34"
+core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
-compose-bom = "2023.03.00"
+compose-bom = "2023.10.01"
 turbine = "1.0.0"
+ksp = "1.9.20-1.0.14"
+poet = "1.15.3"
 
 [plugins]
 androidApp = { id = "com.android.application", version.ref = "androidPlugins" }
@@ -29,7 +30,7 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin"}
 kotlinMpp = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform"}
-
+kspPlugin = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 
 [libraries]
@@ -68,5 +69,9 @@ ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+
+kotlin-poet = { group = "com.squareup", name = "kotlinpoet", version.ref = "poet" }
+kotlin-poet-ksp = { group = "com.squareup", name = "kotlinpoet-ksp", version.ref = "poet" }
+ksp-dev = { group = "com.google.devtools.ksp", name = "symbol-processing-api", version.ref = "ksp" }
 
 [bundles]
